fixed the 'Nominate a Project'  button on small screens

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1224,6 +1224,14 @@ img.gallery-img {
   transition: all 0.3s;
 }
 
+@media (max-width: 500px) {	
+  #showcase-page .nominate a,
+  #showcase-page .nominate a:visited {
+    padding: 0.4em 0.3em;
+    font: 1.3rem "Montserrat", sans-serif;
+  }	
+}
+
 #showcase-page .nominate a:hover {
   top: 4px;
   left: 4px;
